# drac-util

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  dractest.cpp  dractune.cpp  dractweak.cpp  readme.md
.github/workflows/: windows-dractest-release.yml
cmake/: drac_util_version.h.in  dractest-release-readme.txt.in  dractest.desktop.in
scripts/: bootstrap-windows.ps1  build-linux-appimage.sh  enter-windows-toolchain.ps1
